# gentoo-gitmig-20150809-draft

./: header.txt  skel.ChangeLog  skel.ebuild  skel.metadata.xml
app-accessibility/: metadata.xml
app-admin/: manifest  metadata.xml
app-antivirus/: metadata.xml
app-arch/: metadata.xml
app-benchmarks/: metadata.xml
app-cdr/: metadata.xml
app-crypt/: metadata.xml
app-dicts/: metadata.xml
app-doc/: metadata.xml
app-editors/: metadata.xml
app-emacs/: metadata.xml
app-emulation/: metadata.xml
app-forensics/: metadata.xml
app-i18n/: metadata.xml
app-laptop/: metadata.xml
app-misc/: metadata.xml
app-mobilephone/: metadata.xml
app-office/: metadata.xml
app-officeext/: metadata.xml
app-pda/: metadata.xml
app-portage/: metadata.xml
app-shells/: metadata.xml
app-text/: metadata.xml
app-vim/: metadata.xml
app-xemacs/: metadata.xml
dev-ada/: metadata.xml
dev-cpp/: metadata.xml
dev-db/: metadata.xml
dev-dotnet/: metadata.xml
dev-embedded/: metadata.xml
dev-games/: metadata.xml
dev-haskell/: metadata.xml
dev-java/: metadata.xml
dev-lang/: metadata.xml
dev-libs/: metadata.xml
dev-lisp/: metadata.xml
dev-ml/: metadata.xml
dev-perl/: metadata.xml
dev-php/: metadata.xml
dev-php4/: metadata.xml
dev-php5/: metadata.xml
dev-python/: metadata.xml
dev-python/pyxf86config/files/: 0.3.34-bsdmake.patch  0.3.34-remove-rgbpath.patch  Makefile.am  digest-pyxf86config-0.3.33  digest-pyxf86config-0.3.34-r1  xorg-server-1.4-compat.patch
dev-ruby/: metadata.xml
dev-scheme/: metadata.xml
dev-tcltk/: metadata.xml
dev-tex/: metadata.xml
dev-texlive/: metadata.xml
dev-tinyos/: metadata.xml
dev-util/: metadata.xml
dev-vcs/: metadata.xml
eclass/: 64-bit.eclass  ChangeLog  alternatives.eclass  ant-tasks.eclass  aolserver.eclass  apache-2.eclass  apache-ant.eclass  apache-module.eclass  apache.eclass  aspell-dict.eclass  autoconf.eclass  autotools-multilib.eclass  autotools-utils.eclass  autotools.eclass  base.eclass  bash-completion-r1.eclass  bash-completion.eclass  boost-utils.eclass  bsdmk.eclass  bzr.eclass  c.eclass  cannadic.eclass  ccc.eclass  cdrom.eclass  check-kernel.eclass  check-reqs.eclass  chromium.eclass  clutter.eclass  cmake-utils.eclass  common-lisp-common-2.eclass  common-lisp-common-3.eclass  common-lisp-common.eclass  common-lisp.eclass  commonbox.eclass  confutils.eclass  cron.eclass  crosscompile.eclass  cuda.eclass  cvs.eclass  darcs.eclass  (+288 more)
files/: bootstrap-1.0_rc6.packages  bootstrap-20010501.packages  bootstrap-20010513.packages  bootstrap-20010516.packages  bootstrap-20010611.packages  bootstrap-20010617.ebuild  bootstrap-20010706.packages  bootstrap-20010804.packages  bootstrap-20010806.packages  build-1.0_rc6.packages  build-20010501.packages  build-20010513.packages  build-20010804.packages  isoinitrd-20010726.packages  sys-20010425.packages  sys-20010501.packages  sys-20010806.packages
games-action/: metadata.xml
games-arcade/: metadata.xml
games-board/: metadata.xml
games-emulation/: metadata.xml
games-engines/: metadata.xml
games-fps/: metadata.xml
kde-misc/kshutdown/files/: CMakeLists.txt  digest-kshutdown-0.6.0  digest-kshutdown-0.8  digest-kshutdown-0.8.2  digest-kshutdown-1.0  kshutdown-0.6.0-makefile-fix.patch
net-misc/l7-filter-userspace/files/: Makefile.am  configure.ac  digest-l7-filter-userspace-0.4  l7-filter-userspace-0.4-misc.patch  l7-filter-userspace-0.6-gcc4.3compat.patch  l7-filter-userspace-in-fix.patch  l7-filter-userspace-order-in-fix.patch
sci-libs/neartree/files/: 2.1.4-dynlib.patch  2.1.4-gentoo.patch  2.3.1-gentoo.patch  CMakeLists.txt
(+380178 files in other folders)
